# sbpf

./: Cargo.toml  README.md
benches/: elf_loader.rs  jit_compile.rs  memory_mapping.rs  vm_execution.rs
cli/: Cargo.toml
cli/src/: main.rs
doc/: bytecode.md
examples/: disassemble.rs  to_json.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: common.rs  dumb.rs  grammar_aware.rs  semantic_aware.rs  smart.rs  smart_jit_diff.rs  smarter_jit_diff.rs  verify_semantic_aware.rs
src/: assembler.rs  ebpf.rs  elf.rs  insn_builder.rs  interpreter.rs  jit.rs  lib.rs  memory_management.rs  verifier.rs  vm.rs
test_utils/: Cargo.toml
test_utils/src/: lib.rs  syscalls.rs
tests/: assembler.rs  disassembler.rs  elf.rs  execution.rs  exercise_instructions.rs  jit.rs  verifier.rs  vm.rs
tests/elfs/: elfs.sh
