[package]
name = "sbpf_cli"
version = "0.14.0"
description = "CLI to test and analyze eBPF programs"
authors = ["Trezoa-team Maintainers <maintainers@trezoa.xyz>"]
repository = "https://github.com/trezoa-xyz/sbpf"
homepage = "https://trezoa.com/"
keywords = ["BPF", "eBPF", "interpreter", "JIT"]
edition = "2018"

[dependencies]
trezoa-sbpf = { path = "../", features = ["debugger"] }
test_utils = { path = "../test_utils/" }
clap = "3.0.0-beta.2"
